# HelioSoil

./: .flake8  .gitignore  .gitignore~  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.ipynb  demo_cleaning_optimization.ipynb  demo_cleaning_optimization_heuristic.ipynb  demo_hrz0_fitting.ipynb  demo_soiling_model simplified.ipynb  demo_soiling_model.ipynb  environment.yml  heuristic_optimization.ipynb  hrz0_fitting_demo.ipynb  plot_data.ipynb  pyproject.toml  requirements.txt  soiling_model.py
.soilenv/: pyvenv.cfg
.soilenv/Scripts/: activate  activate.bat  numba
analysis_scripts/: ablrf_analysis.py  angle_of_incidence_model_comparison.py  imdea_analysis.py  mount_isa_analysis.py  mount_isa_analysis2.py  paper_specific_utilities.py  port_augusta_analysis.py  raygen_analysis.py  raygen_analysis_heliostats.py  sandia_analysis.py  test_ref_recovery.ipynb  wodonga_analysis.py  yadnarie_analysis.py
data/: parameters.xlsx  woomera_data.xlsx
data/public/: SF_woomera_SolarPILOT.csv  parameters.xlsx  woomera_data.xlsx  woomera_location_modified.epw
data/public/qut_experiments/: experiment_20170807_20170811_cinque.xlsx  experiment_20170828_20170901_cinque.xlsx  experiment_20170905_20170913_cinque.xlsx  experiment_20170915_20170921_cinque.xlsx  parameters_qut_experiments.xlsx
data/qut_experiments/: experiment_20170828_20170901_cinque.xlsx  experiment_20170915_20170921_cinque.xlsx
docs/source/: base_models.rst  cleaning_optimization.rst  conf.py  field_models.rst  fitting.rst  index.rst  modules.rst  paper_specific_utilities.rst  utilities.rst
examples/: demo_cleaning_optimization_heuristic.ipynb  demo_hrz0_fitting.ipynb  demo_soiling_model simplified.ipynb  demo_soiling_model.ipynb
examples/woomera_demo/: SF_woomera_SolarPILOT.csv  woomera_data.xlsx
extinction_lookup_tables/: acceptance_angles.json  diameters.json  extinction_weights_lookup_table.json  metadata.json
heliosoil/: __init__.py  base_models.py  cleaning_optimization.py  field_models.py
soiling_model/: __init__.py  base_models.py  cleaning_optimization.py  field_models.py  fitting.py  paper_specific_utilities.py  utilities.py
src/heliosoil/: __init__.py  base_models.py  cleaning_optimization.py  dust_distributions.py  field_models.py  fitting.py  paper_specific_utilities.py  utilities.py
src/heliosoil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_run_examples.py
woomera_demo/: SF_woomera_SolarPILOT.csv  parameters.xlsx  woomera_data.xlsx
